force-app/main/default/objects/Capital_Call__c/fields/Does_Call_Satisfy_Schedule_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Does_Call_Satisfy_Schedule_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Call Satisfy Schedule Requirements?</label>
    <type>Checkbox</type>
</CustomField>