force-app/main/default/objects/Capital_Call__c/fields/Fund_Agreement_Default_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Fund_Agreement_Default_Provisions__c</fullName>
    <label>Fund Agreement Default Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Calling The Entire Commitment</fullName>
            </value>
            <value>
                <fullName>Sale of Interest</fullName>
            </value>
            <value>
                <fullName>Withholding Against Future Distributions</fullName>
            </value>
            <value>
                <fullName>Loaning of the Commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>