force-app/main/default/objects/Capital_Call__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Capital Calls</relationshipLabel>
    <relationshipName>Capital_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>