force-app/main/default/objects/Capital_Call__c/fields/LPA__c.field-meta.xml
<CustomField>
    <fullName>LPA__c</fullName>
    <label>LPA</label>
    <type>Url</type>
</CustomField>