force-app/main/default/objects/Capital_Call__c/fields/of_Unfunded_Capital_Called_For__c.field-meta.xml
<CustomField>
    <fullName>of_Unfunded_Capital_Called_For__c</fullName>
    <label>% of Unfunded Capital Called For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>